--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/posts.css">
+   
 </head>
 <body>
+
         <header>
             header
         </header>
@@ -21,6 +23,7 @@
         <aside class="messenger">
             messenger
         </aside>
+        <script src="./js/main.js" type="module"></script>
     
 </body>
 </html>
