--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Facebook</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/posts.css">
-   
 </head>
-<body>
 
-        <header>
-            header
-        </header>
-        <aside class="menu">
-            meniu
-        </aside>
-        <main>
-            feed
-        </main>
-        <aside class="messenger">
-            messenger
-        </aside>
-        <script src="./js/main.js" type="module"></script>
-    
+<body>
+    <header>
+        HEADER
+    </header>
+    <aside class="menu">
+        MENU
+    </aside>
+    <main>
+        FEED
+    </main>
+    <aside class="messenger">
+        MESSENGER
+    </aside>
+
+    <script src="./js/main.js" type="module"></script>
 </body>
+
 </html>
