--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         MENU
     </aside>
     <main>
-        FEED
+        feed
+
     </main>
     <aside class="messenger">
         MESSENGER
